--- a/config/project-scratch-def.json
+++ b/config/project-scratch-def.json
@@ -2,6 +2,6 @@
     "orgName": "dan Company",
     "edition": "Developer",
     "orgPreferences" : {
-        "enabled": ["S1DesktopEnabled"]
+        "enabled": ["S1DesktopEnabled", "IsQuoteEnabled"]
     }
 }
